<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- ActionBar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorTitleText">

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/myhz"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/font_14" />

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:paddingLeft="20dp"
                android:scaleType="centerInside"
                android:src="@mipmap/mycenter_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/font_11" />
        </LinearLayout>
    </RelativeLayout>
    <!-- 头部 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/password_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logon_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userRegister"
                android:textColor="@color/colorHeadText"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

    </RelativeLayout>


    <!--  用户名输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/red"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            />


        <com.mycarhz.myhz.utils.JustifyTextView
            android:id="@+id/userName_login_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/user_text_zc"
            android:textColor="@color/textUser"
            android:textSize="@dimen/font_14" />


        <EditText
            android:id="@+id/et_userName_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/login_user_hint"
            android:singleLine="true"
            android:textColorHint="@color/cut_off" />
        <Button
            android:id="@+id/btn_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="获取验证码"
            android:background="@drawable/shape_verification_code"
            android:clickable="true"
            android:textSize="@dimen/font_12"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_off" />

    <!--  验证码输入框
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/red"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            />


        <com.mycarhz.myhz.utils.JustifyTextView
            android:id="@+id/passWorld_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_text"
            android:textColor="@color/textUser"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_verificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/verification_code_et_hint"
            android:singleLine="true"
            android:textColorHint="@color/cut_off" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_off" />

    <!--  密码输入框
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/red"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            />


        <com.mycarhz.myhz.utils.JustifyTextView
            android:id="@+id/passWorld_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/passWorld_text_zc"
            android:textColor="@color/textUser"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/login_passWorld_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/cut_off" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_off" />

    <!--  确认密码输入框
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/red"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            />

        <com.mycarhz.myhz.utils.JustifyTextView
            android:id="@+id/passWorld_confirm_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/passWorld_text_qr"
            android:textColor="@color/textUser"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/passWorld_et_hint"
            android:textColorHint="@color/cut_off" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_off" />

    <!--  推荐码输入框
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/white"
            android:layout_marginLeft="50dp"
            />

        <com.mycarhz.myhz.utils.JustifyTextView
            android:id="@+id/passWorld_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/recommend_code_text"
            android:textColor="@color/textUser"
            android:textSize="@dimen/font_14" />

        <EditText
            android:id="@+id/et_recommend_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/recommend_code_et_hint"
            android:singleLine="true"
            android:textColorHint="@color/cut_off" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_off" />

    <!--  其他按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGray"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/passWorld_retrieved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/terms"
            android:textColor="@color/colorHeadText"
            android:textSize="@dimen/font_12" />
    </LinearLayout>
</LinearLayout>